<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Food Name Input -->
    <EditText
        android:id="@+id/dialogFoodNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Food Name"
        android:padding="8dp"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Quantity Input -->
    <EditText
        android:id="@+id/dialogQuantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Quantity"
        android:padding="8dp"
        android:backgroundTint="@color/primaryColor"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/dialogFoodNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Expiration Date Picker -->
    <TextView
        android:id="@+id/dialogExpirationDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Select Expiration Date"
        android:padding="8dp"
        android:background="@drawable/rounded_background"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/dialogQuantityEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"  />

    <!-- Category Selector -->
    <Spinner
        android:id="@+id/dialogCategorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialogExpirationDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/locationToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/buttonToggleFridge"
        app:layout_constraintTop_toBottomOf="@id/dialogCategorySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonToggleFridge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fridge"
                app:cornerRadius="16dp"
                style="?attr/materialButtonOutlinedStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTogglePantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pantry"
                app:cornerRadius="16dp"
                style="?attr/materialButtonOutlinedStyle"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    <!--    <Spinner-->
<!--        android:id="@+id/dialogLocationSpinner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:spinnerMode="dropdown"-->
<!--        android:entries="@array/locations"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dialogCategorySpinner"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <CheckBox
        android:id="@+id/dialogReplenishCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Replenish Automatically"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/locationToggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
